# Vulkan-Path-Tracer

./: .gitignore  .gitmodules  CMakeLists.txt  Energy.md  LICENSE  README.md  TechnicalOverview.md  imgui.ini  index.html  premake5.lua  style.css  vcpkg.json
Assets/: Black.hdr  BreakfastRoom.gltf  CannelleEtFromage.gltf  ClosedRoom.gltf  CloudTest.gltf  Cornell-Volume.glb  CornellBox.gltf  CornellBoxGlass.gltf  FurnaceTest.gltf  MaterialTest.gltf  MitsubaBall.gltf  Plane.gltf  SuzanneRoom.gltf  Teapot.gltf  TeapotMarble.gltf  TeapotWithLight.gltf  Test.hdr  VikingRoom.gltf  VolumeTest.gltf  WhiteSmall.hdr
Docs/: AntiAliasing.md  BSDF.md  Benchmark.md  CodeStructure.md  DepthOfField.md  EnergyCompensation.md  NextEventEstimation.md  ParticipatingMedia.md  ProjectOverview.md  RayTracingPipeline.md  RussianRoulette.md
Features/: AntiAliasing.html  BSDF.html  Benchmark.html  DepthOfField.html  EnergyCompensation.html  NextEventEstimation.html  ParticipatingMedia.html  RussianRoulette.html  feature-style.css
PathTracer/: Application.cpp  Application.h  CMakeLists.txt  Editor.cpp  Editor.h  FlyCamera.cpp  FlyCamera.h  LookupTableCalculator.cpp  LookupTableCalculator.h  PathTracer.cpp  PathTracer.h  PostProcessor.cpp  PostProcessor.h  imgui.ini  premake5.lua
PathTracer/Shaders/: Atmosphere.slang  Bindings.slang  ClosestHit.slang  Defines.slang  LookupReflect.slang  LookupRefract.slang  Material.slang  Miss.slang  MissShadow.slang  RTCommon.slang  RayGen.slang  Sampler.slang  Surface.slang  Tonemap.slang  Volume.slang
PathTracer/Shaders/PostProcess/: BloomDownSample.slang  BloomUpSample.slang  Tonemap.slang
PathTracer/assets/: DragonHead.gltf  MaterialBall.gltf  MaterialTest.gltf  balls.gltf  box.gltf  cornell-box2.gltf  cornellBox.gltf  mustang.gltf  plane.gltf  sphere.gltf  spheres.gltf  spheres_in_the_dark.gltf  teapot_marble.gltf  teapot_tiled.gltf  test.gltf  x6.gltf
PathTracer/assets/lookupTables/: ReflectionLookup  RefractionEtaGreaterThan1  RefractionEtaLessThan1
PathTracer/assets/scenes/: CausticsMonkey.ptscene  Cornell.ptscene  Cornell1.ptscene  CornellBox.ptscene  FurnaceTest.ptscene  GlassFurnaceTest.ptscene  IORtest.ptscene  MaterialTest.ptscene  MetallicFurnaceTest.ptscene  Volume Test.ptscene  test.ptscene
PathTracer/src/: Application.cpp  Application.h  CameraScript.h  Components.h  Editor.cpp  Editor.h  EnergyLossCalculator.cpp  EnergyLossCalculator.h  PathTracer.cpp  PathTracer.h  PostProcessor.cpp  PostProcessor.h  Rasterizer.cpp  Rasterizer.h  SceneRenderer.cpp  SceneRenderer.h  State.cpp  State.h  main.cpp
PathTracer/src/shaders/: BRDF.glsl  BRDFtest.glsl  BSDF.glsl  BSDFExperimental.glsl  Camera.slang  DepthOfField.comp  EnergyLossCalculatorReflection.slang  EnergyLossCalculatorRefraction.slang  Film.slang  GBuffer.frag  GBuffer.vert  Material.slang  Payload.slang  Quad.vert  QuadFrag.glsl  Ray.slang  Sampler.slang  Sampling.glsl  Surface.slang  Volume.slang  envSampling.glsl  helloWorld.slang  rasterizer.frag  rasterizer.vert  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytraceExperimental.rchit  raytraceTest.rchit  raytraceTest.rgen  raytraceTest.rmiss  rchit.slang  rgen.slang  rtcommon.slang  rtmiss.hlsl  rtmiss.slang
